# conduit

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
conduit/: __init__.py  cli.py  config.py  main.py  models.py  resolver.py
conduit/api/: admin.py  billing.py  connections.py  health.py
docs/: API.md  index.html
docs/architecture/: ARCHITECTURE.md  LIFECYCLE.md
examples/: conduit.yaml
web/: index.html
